# trd

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/skills/trd/: SKILL.md
.claude/skills/week-ahead/: SKILL.md
.github/workflows/: ci.yml
deploy/: README.md  glp1-checkin.sh  io.silverbeer.trd.glp1checkin.plist  io.silverbeer.trd.sundayprep.plist  sunday-prep.sh
src/trd/: config.py  errors.py
src/trd/cli/: app.py  render.py
src/trd/data/: __init__.py  market_calendar.py  universe.py
src/trd/db/: connection.py
src/trd/indicators/: __init__.py  base.py  library.py  math.py
src/trd/learn/: __init__.py  glossary.py
src/trd/models/: __init__.py  core.py
src/trd/providers/: __init__.py  base.py  yf.py
src/trd/repos/: __init__.py  accounts.py  earnings.py  indicator_config.py  instruments.py  prep_snapshot.py  prices.py  transactions.py  watchlists.py
src/trd/services/: __init__.py  backup.py  benchmark.py  dashboard.py  dca_detail.py  dca_projection.py  earnings.py  equity_curve.py  fifo.py  indicators.py  movers.py  plan.py  portfolio.py  sim.py  (+5 more)
tests/: conftest.py  test_backup.py  test_benchmark.py  test_cli.py  test_dashboard.py  test_db.py  test_db_busy.py  test_dca_detail.py  test_dca_projection.py  test_earnings.py  test_equity_curve.py  test_fifo.py  test_import.py  test_indicator_math.py  test_indicator_service.py  test_learn.py  test_lots.py  test_movers.py  test_plan.py  test_plan_pnl.py  test_portfolio_service.py  test_prep_history.py  test_sim.py  test_sunday_prep.py  test_sync.py  test_watchlist.py  test_xirr.py
(+9 files in other folders)
