[project]
name = "trd"
version = "0.1.0"
description = "Local-first investment tracker: portfolio, watchlists, indicators, simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "duckdb>=1.2",
    "yfinance>=0.2.54",
    "lxml>=6.1.1",
]

[project.scripts]
trd = "trd.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trd"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Indicator classes assign ClassVar attrs declared on the base; ruff can't see the
# inherited annotation and flags every dict/list as a mutable class default.
"src/trd/indicators/library.py" = ["RUF012"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
